Fix z-index of tom-select dropdown

--- a/app/assets/stylesheets/components/_dropzone.scss
+++ b/app/assets/stylesheets/components/_dropzone.scss
@@ -4,3 +4,13 @@
   margin-bottom: 1rem !important;
   margin-top: 6px !important;
 }
+
+.dropzone-msg {
+  &--only-child {
+    display: none !important;
+
+    &:only-child {
+      display: revert !important;
+    }
+  }
+}
